@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.40 [20140821] [svn: r601]
+Changelog for sg3_utils-1.40 [20140827] [svn: r602]
   - sg_write_verify: new utility for WRITE AND VERIFY
   - sg_senddiag: add --maxlen= option
   - sg_copy_results: correct response length calculations
@@ -16,6 +16,7 @@ Changelog for sg3_utils-1.40 [20140821] [svn: r601]
   - sg_sat_*: mention t_type and multiple_count fields
   - win32: sg_scan: handle larger configurations
   - sg_lib: trim trailing spaces in dStrHex() and friends
+  - sg_unaligned.h: add header for building parameters
   - examples/sg_tst_async: new Linux sg test utility
 
 Changelog for sg3_utils-1.39 [20140612] [svn: r588]
